[package]
name = "solana_pump"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
solana-client = "=2.1.14"
solana-sdk = "=2.1.14"
solana-program = "2.1.14"
spl-token = "7.0.0"

solana-transaction-status = "=2.1.14"
spl-associated-token-account = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" 
thiserror = "1.0"
tracing = "0.1" 
tracing-subscriber = "0.3"
petgraph = "0.6"
dashmap = "6.1.0"
futures = "0.3"
clap = { version = "4.5.20", features = ["derive"] }
chrono = "0.4.40"
dotenv = "0.15.0"
borsh = "1.5.5"  
once_cell = "1.20.3"
bincode = "1.3.3"
jito-sdk-rust = "0.1.0"
yellowstone-grpc-proto = "5.0.0"
yellowstone-grpc-client = "5.0.0"
futures-util = "0.3.31"
rand = "0.9.0"
pyth-sdk-solana = "0.10.4"


